using JS innerWindow height width to try to prevent jumping of image

--- a/css/standardLayout.css
+++ b/css/standardLayout.css
@@ -286,8 +286,8 @@ section {
     top: 0;
     left: 0;
     background-color: black;
-    height: 100%;
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
     overflow: hidden;
     background-size: cover;
     background-repeat: no-repeat;
